src/testing/private_tests/negative_tests/bad_include_self.eds
#include "bad_include_self.eds"

int func(int a) {
    return a+2;
}

void main() {
    int i;
    i = func(3);
}
